--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -4,6 +4,7 @@ body
 background-color:#d0e4fe;
 align-content: center;
 text-align: center;
+align-self: center;
 }
 .title{
 	color:green;
@@ -13,10 +14,12 @@ text-align: center;
 	color:green;
 }
 table{
-	align-content: center;
+	margin-left: auto;
+    margin-right: auto;
+ 
 	text-align: center;
 	border:1;
-	width: 100%;
+	width: 30%;
 	
 }
 
