--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,26 +1,22 @@
-
-body
-{
-background-color:#d0e4fe;
-align-content: center;
-text-align: center;
-align-self: center;
-}
-.title{
-	color:green;
-
-}
-.subtittle{
-	color:green;
-}
-table{
-	margin-left: auto;
-    margin-right: auto;
- 
+body {
+	background-color: #d0e4fe;
+	align-content: center;
 	text-align: center;
-	border:1;
-	width: 30%;
-	
+	align-self: center;
 }
 
- 
+.title {
+	color: green;
+}
+
+.subtittle {
+	color: green;
+}
+
+table {
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	border: 1;
+	width: 30%;
+}
